<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.about.AboutActivity">

    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
                                       android:layout_height="?attr/actionBarSize"
                                       app:layout_constraintTop_toTopOf="parent"
                                       app:layout_constraintStart_toStartOf="parent"
                                       app:layout_constraintEnd_toEndOf="parent" android:id="@+id/toolbar2"/>

    <FrameLayout android:layout_width="0dp"
                 android:background="@color/colorPrimary"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar2" android:layout_height="280dp"
                 android:id="@+id/frameLayout">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView android:layout_width="100dp" android:layout_height="100dp"
                                                          app:layout_constraintTop_toTopOf="parent"
                                                          app:layout_constraintBottom_toBottomOf="parent"
                                                          app:layout_constraintVertical_bias="0.31"
                                                          app:layout_constraintStart_toStartOf="parent"
                                                          app:layout_constraintHorizontal_bias="0.5"
                                                          app:layout_constraintEnd_toEndOf="parent"
                                                          android:src="@drawable/muhadif"
                                                          android:scaleType="centerCrop"
                                                          android:id="@+id/circleImageView"/>
            <TextView
                    android:text="@string/creator"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/circleImageView"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>
    <FrameLayout
            android:background="@android:color/white"
            android:layout_width="0dp" android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="200dp" app:layout_constraintTop_toTopOf="@+id/frameLayout">

        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="match_parent">


            <TextView
                    android:text="@string/hobi"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/kesukuaan"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                    android:text="@string/traveling"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
            />
            <TextView
                    android:text="@string/kuliner"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    android:layout_marginTop="2dp" app:layout_constraintEnd_toEndOf="@+id/textView4"/>
            <TextView
                    android:text="@string/kucing"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="@+id/textView7"/>
            <TextView
                    android:text="@string/creator_fullname"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="Wong Mbantul"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10" app:layout_constraintEnd_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>